# Lambda-v3

./: .gitignore  README.md  config.py  main.py  requirements.txt  schema.sql
app/: web.py
app/core/: __init__.py  bot.py  cdn.py  flags.py  help.py  helpers.py  models.py  timers.py
app/database/: __init__.py  core.py  migrations.py
app/extensions/: admin.py  ai.py  compat.py  custom_commands.py  developer.py  giveaways.py  invites.py  leveling.py  management.py  misc.py  music.py  reminders.py  settings.py  typeracing.py  utility.py
app/features/: custom_commands.py  docs.py  ocr.py
app/features/leveling/: core.py  rank_card.py
app/util/: __init__.py  ansi.py  common.py  converters.py  deepl.py  flags.py  image.py  pagination.py  pillow.py  structures.py  tags.py  timezone.py  types.py  views.py
assets/: pytag_prepend.py
bot/: __init__.py  constants.py
bot/core/: bot.py  database.py  models.py
bot/extensions/: general.py  leveling.py
bot/features/leveling/: __init__.py  core.py  rank_card.py
bot/types/: common.py  leveling.py  pillow.py  subclasses.py
bot/utils/: __init__.py  common.py  image.py  pillow.py  structures.py
migrations/: custom_commands-1649384651.migration.sql  customcommands-1649384651.migration.sql  extra_features-1691608888.migration.sql  giveaways-1690492665.migration.sql  leveling-1648411402.migration.sql  prefix-1648322680.migration.sql
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
