[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_native"
crate-type = ["cdylib"]

[build.release]
lto = "fat"

[dependencies]
select = "0.5.0"

[dependencies.pyo3]
version = "0.16.1"
features = ["extension-module"]